--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ document.getElementById("linkForm").addEventListener("submit", function(event) {
     var saudacao;
     var horaAtual = new Date().getHours();
     if (horaAtual < 12) {
-        saudacao = "Boa dia, tudo bem?";
+        saudacao = "Bom dia, tudo bem?";
     } else {
         saudacao = "Boa tarde, tudo bem?";
     }
